# opengl

./: .clang-format  CMakeLists.txt
include/: shaders.h  stb_image.h
shaders/: texture.fragment.glsl  texture.vertex.glsl
src/: main.c  shaders.c
src/shaders/: breathing.fragment.glsl
